--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -187,88 +187,101 @@
 
 
 <!--    4. BMI calculation -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="BMI Calculator"
-        android:textSize="30dp"
-        android:textAlignment="center"
-        android:background="@color/red"
-        android:padding="5px"
-        android:textColor="@color/white"
-        android:layout_marginBottom="20px"
-        />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Give your weight in KG"
-        android:textSize="25dp"
-        android:padding="5px"
-        android:layout_marginTop="20px"
-        android:layout_marginBottom="20px"
-        />
+<!--    <TextView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="BMI Calculator"-->
+<!--        android:textSize="30dp"-->
+<!--        android:textAlignment="center"-->
+<!--        android:background="@color/red"-->
+<!--        android:padding="5px"-->
+<!--        android:textColor="@color/white"-->
+<!--        android:layout_marginBottom="20px"-->
+<!--        />-->
+<!--    <TextView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Give your weight in KG"-->
+<!--        android:textSize="25dp"-->
+<!--        android:padding="5px"-->
+<!--        android:layout_marginTop="20px"-->
+<!--        android:layout_marginBottom="20px"-->
+<!--        />-->
+<!--    <EditText-->
+<!--        android:id="@+id/weightKg"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:hint="Weight in KG"-->
+<!--        android:inputType="numberDecimal"-->
+<!--        />-->
+<!--    <TextView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Give your height in feet and inch"-->
+<!--        android:textSize="25dp"-->
+<!--        android:padding="5px"-->
+<!--        android:layout_marginTop="20px"-->
+<!--        android:layout_marginBottom="20px"-->
+<!--        />-->
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:padding="10px"-->
+<!--        android:layout_marginTop="20px"-->
+<!--        android:layout_marginBottom="20px"-->
+<!--        android:orientation="horizontal"-->
+<!--        >-->
+<!--        <EditText-->
+<!--            android:id="@+id/heightFeet"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:ems="8"-->
+<!--            android:inputType="number"-->
+<!--            android:hint="Feet"-->
+<!--            android:layout_marginRight="10px"-->
+<!--            />-->
+<!--        <EditText-->
+<!--            android:id="@+id/heightInch"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:ems="10"-->
+<!--            android:inputType="number"-->
+<!--            android:hint="Inch"-->
+<!--            />-->
+<!--    </LinearLayout>-->
+
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:gravity="center">-->
+<!--        <Button-->
+<!--            android:id="@+id/calculateBMI"-->
+<!--            android:textAllCaps="false"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="Calculate BMI"-->
+<!--            android:textSize="20dp"-->
+<!--            ></Button>-->
+<!--    </LinearLayout>-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/displayResult"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text=""-->
+<!--        android:textSize="20dp"></TextView>-->
+
     <EditText
-        android:id="@+id/weightKg"
+        android:id="@+id/inputText"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Weight in KG"
-        android:inputType="numberDecimal"
+        android:layout_height="300dp"
+        android:hint="Please, enter text"
+        android:textSize="20dp"
         />
-    <TextView
+    <Button
+        android:id="@+id/readTextButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Give your height in feet and inch"
-        android:textSize="25dp"
-        android:padding="5px"
-        android:layout_marginTop="20px"
-        android:layout_marginBottom="20px"
-        />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10px"
-        android:layout_marginTop="20px"
-        android:layout_marginBottom="20px"
-        android:orientation="horizontal"
-        >
-        <EditText
-            android:id="@+id/heightFeet"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="8"
-            android:inputType="number"
-            android:hint="Feet"
-            android:layout_marginRight="10px"
-            />
-        <EditText
-            android:id="@+id/heightInch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="number"
-            android:hint="Inch"
-            />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center">
-        <Button
-            android:id="@+id/calculateBMI"
-            android:textAllCaps="false"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Calculate BMI"
-            android:textSize="20dp"
-            ></Button>
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/displayResult"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textSize="20dp"></TextView>
+        android:text="Read Text"/>
 
 </LinearLayout>
